force-app/main/default/objects/ssot__LoyaltyProgramMember__dlm/ssot__LoyaltyProgramMember__dlm.object-meta.xml
<CustomObject>
    <mktDataModelAttributes>
        <creationType>Standard</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <description>A person who has joined a Loyalty Program</description>
        <isEnabled>false</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Unassigned</objectCategory>
        <referenceEntityGroup>Loyalty Program</referenceEntityGroup>
        <referenceEntityName>LoyaltyProgramMember</referenceEntityName>
        <referenceEntitySubjectArea>Loyalty Program</referenceEntitySubjectArea>
    </mktDataModelAttributes>
</CustomObject>