force-app/main/default/objects/ssot__LoyaltyProgramMember__dlm/fields/ssot__CanReceivePromotions__c.field-meta.xml
<CustomField>
    <fullName>ssot__CanReceivePromotions__c</fullName>
    <label>Can Receive Promotions</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CanReceivePromotions</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>