force-app/main/default/objects/ssot__LoyaltyProgramMember__dlm/fields/ssot__LoyaltyMemberTypeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__LoyaltyMemberTypeId__c</fullName>
    <label>Loyalty Member Type</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LoyaltyMemberTypeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>