force-app/main/default/objects/ssot__LoyaltyProgramMember__dlm/fields/ssot__LoyaltyProgramMemberStatusId__c.field-meta.xml
<CustomField>
    <fullName>ssot__LoyaltyProgramMemberStatusId__c</fullName>
    <label>Loyalty Program Member Status</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LoyaltyProgramMemberStatusId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>