force-app/main/default/objects/ssot__LoyaltyProgramMember__dlm/fields/ssot__ReferredByMemberId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ReferredByMemberId__c</fullName>
    <label>Referred by Member</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ReferredByMemberId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>