force-app/main/default/objects/ssot__LoyaltyProgramMember__dlm/fields/ssot__ReferredByPartyId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ReferredByPartyId__c</fullName>
    <label>Referred by Party</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ReferredByPartyId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>