force-app/main/default/objects/ssot__LoyaltyProgramMember__dlm/fields/ssot__rel_1697761150065_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761150065_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AccountContact_Id_map_LoyaltyProgram_rel</label>
    <referenceTo>ssot__AccountContact__dlm</referenceTo>
    <relationshipLabel>AccountContact_Id_map_LoyaltyProgram_rel</relationshipLabel>
    <relationshipName>rel_1697761150065_end</relationshipName>
    <type>Lookup</type>
</CustomField>