force-app/main/default/objects/ssot__LoyaltyProgramMember__dlm/fields/ssot__rel_1697761152017_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761152017_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account_Id_map_LoyaltyProgramMember__rel</label>
    <referenceTo>ssot__Account__dlm</referenceTo>
    <relationshipLabel>Account_Id_map_LoyaltyProgramMember__rel</relationshipLabel>
    <relationshipName>rel_1697761152017_end</relationshipName>
    <type>Lookup</type>
</CustomField>