force-app/main/default/objects/ssot__LoyaltyProgramMember__dlm/fields/ssot__rel_1697761176670_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761176670_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Individual_Id_map_LoyaltyProgramMemb_rel</label>
    <referenceTo>ssot__Individual__dlm</referenceTo>
    <relationshipLabel>Individual_Id_map_LoyaltyProgramMemb_rel</relationshipLabel>
    <relationshipName>rel_1697761176670_end</relationshipName>
    <type>Lookup</type>
</CustomField>