force-app/main/default/objects/ssot__LoyaltyProgramMember__dlm/fields/ssot__RelatedCorporateProgramMemberId__c.field-meta.xml
<CustomField>
    <fullName>ssot__RelatedCorporateProgramMemberId__c</fullName>
    <label>Related Corporate Program Member</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RelatedCorporateProgramMemberId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>