force-app/main/default/objects/ssot__LoyaltyProgramMember__dlm/fields/ssot__StatementFrequencyTimeUOM__c.field-meta.xml
<CustomField>
    <fullName>ssot__StatementFrequencyTimeUOM__c</fullName>
    <label>StatementFrequencyTimeUOM</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>StatementFrequencyTimeUOM</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>