force-app/main/default/objects/ssot__LoyaltyProgramMember__dlm/fields/ssot__StatementLastGeneratedDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__StatementLastGeneratedDate__c</fullName>
    <label>Statement Last Generated Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>StatementLastGeneratedDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>